--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ POSTGRES_PASSWORD='petro_pass'
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
-DJANGO_SETTINGS_MODULE=config.settings.local
+DJANGO_SETTINGS_MODULE=petrosanattaraz.settings
