Add redirects for deploy on main domain

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,14 @@
 # -------------------------
+# Nginx global settings
+# -------------------------
+map_hash_bucket_size 256;
+
+# -------------------------
 # HTTP → HTTPS redirect
 # -------------------------
 server {
     listen 80;
-    server_name test-seo.petrosanattaraz.com www.test-seo.petrosanattaraz.com;
+    server_name petrosanattaraz.com www.petrosanattaraz.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -17,10 +22,10 @@ server {
 # -------------------------
 server {
     listen 443 ssl;
-    server_name test-seo.petrosanattaraz.com www.test-seo.petrosanattaraz.com;
+    server_name petrosanattaraz.com www.petrosanattaraz.com;
 
-    ssl_certificate /etc/letsencrypt/live/test-seo.petrosanattaraz.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/test-seo.petrosanattaraz.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/petrosanattaraz.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/petrosanattaraz.com/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -33,10 +38,14 @@ server {
     add_header X-XSS-Protection "1; mode=block";
 
     # -------------------------
+    if ($redirect_uri) {
+        return 301 $redirect_uri$is_args$args;
+    }
+    # -------------------------
     # ریدایرکت ریشه به /fa/
     # -------------------------
     location = / {
-        return 302 /fa/;
+        return 301 /fa/;
     }
 
     # -------------------------
@@ -50,10 +59,12 @@ server {
         alias /code/media/;
     }
 
+
     # -------------------------
-    # backend (Django)
+    # backend (Django) با ریدایرکت‌ها
     # -------------------------
     location / {
+
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
