--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   nginx:
     image: nginx:alpine
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx:/etc/nginx/conf.d
       - static_volume:/code/staticfiles
       - media_volume:/code/media
       - /etc/letsencrypt:/etc/letsencrypt:ro
